--- a/angular-search/src/app/page/layout/navigation/navigation.component.html
+++ b/angular-search/src/app/page/layout/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<div class="navigation">
+<div class="navigation" [class.open]="isOpen">
   <div class="logo">
     <a href=index.html>
       <img src="assets/images/ademax_no_font.png" alt="logo">
