--- a/angular-search/src/app/page/layout/header/header.component.html
+++ b/angular-search/src/app/page/layout/header/header.component.html
@@ -4,8 +4,13 @@
       <div class="header-body-left">
         <ul class="navbar-nav">
           <li class="nav-item navigation-toggler">
-            <a href="#" class="nav-link">
-              <i class="ti-menu"></i>
+            <a href="javascript: void(0)" (click)="toggleNavigation()" class="nav-link">
+              <fa-icon [icon]="faBars"></fa-icon>
+            </a>
+          </li>
+          <li class="nav-item search-toggler">
+            <a href="javascript: void(0)" (click)="toggleSearch()" class="nav-link">
+              <fa-icon [icon]="faSearch"></fa-icon>
             </a>
           </li>
           <li class="nav-item">
@@ -18,13 +23,5 @@
         <RightNav></RightNav>
       </div>
     </div>
-
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item header-toggler">
-        <a href="#" class="nav-link">
-          <i class="ti-arrow-down"></i>
-        </a>
-      </li>
-    </ul>
   </div>
 </div>
