--- a/angular-search/src/app/page/layout/navigation/navigation.component.scss
+++ b/angular-search/src/app/page/layout/navigation/navigation.component.scss
@@ -76,3 +76,23 @@
     }
   }
 }
+
+@media (max-width: 1200px) {
+  .navigation {
+    left: -80% !important;
+    opacity: 0;
+    transition: left .2s;
+    z-index: 99999;
+
+    &.open {
+      left: 0 !important;
+      opacity: 1;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .navigation ul li a {
+    padding: 7px 0;
+  }
+}
