--- a/angular-search/src/app/page/search/search.component.html
+++ b/angular-search/src/app/page/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-3">
+  <div class="col-lg-3">
     <Card title="Lọc theo tiêu chí" icon="bx-search-alt.svg">
       <Tree [data]="treeData" (onSelect)="onTreeFilter($event)"></Tree>
     </Card>
@@ -9,7 +9,7 @@
       <Button type="secondary" icon="bx-bar-chart-alt.svg" class="w-full py-1">Kho lưu</Button>
     </Card>
   </div>
-  <div class="col-9 flex flex-col">
+  <div class="col-lg-9 flex flex-col">
     <Card>
       <DateFilter
         text="Ngày ký"
