update search page

--- a/angular-search/src/globals.scss
+++ b/angular-search/src/globals.scss
@@ -6,6 +6,7 @@ $small-navigation-width: 100px;
 $body-bg-color-dark-light: #2b3653;
 
 $color-primary: #ff9500;
+$color-primary-light: #FFE5BF;
 $color-secondary: #a461d8;
 
 $background-primary: #FFFFFF;
