--- a/angular-search/src/app/page/layout/header/rightnav/rightnav.component.html
+++ b/angular-search/src/app/page/layout/header/rightnav/rightnav.component.html
@@ -1,6 +1,7 @@
 <ul class="navbar-nav">
-  <li class="nav-item dropdown">
-    <a href="#" class="nav-link profile-nav-link dropdown-toggle" title="User menu"
+  <li class="nav-item dropdown" ngbDropdown>
+    <a ngbDropdownToggle href="javascript: void(0);"
+       class="nav-link profile-nav-link dropdown-toggle" title="User menu"
        data-toggle="dropdown">
       <span class="mr-2 d-sm-inline d-none">{{userName}}</span>
       <figure class="avatar avatar-sm">
@@ -9,32 +10,12 @@
              alt="avatar">
       </figure>
     </a>
-    <div class="dropdown-menu dropdown-menu-right dropdown-menu-big">
-      <div class="text-center py-4"
-           data-background-image="../../assets/media/image/image1.jpg">
-        <figure class="avatar avatar-lg mb-3 border-0">
-          <img src="../../assets/media/image/user/man_avatar3.jpg"
-               class="rounded-circle" alt="image">
-        </figure>
-        <h5 class="mb-0">Bony Gidden</h5>
-      </div>
+    <div
+      class="dropdown-menu dropdown-menu-right dropdown-menu-big"
+      ngbDropdownMenu
+    >
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item" data-sidebar-target="#settings">Settings</a>
-        <a href="http://bifor.laborasyon.com/login" class="list-group-item text-danger"
-           data-sidebar-target="#settings">Sign Out!</a>
-      </div>
-      <div class="pb-0 p-4">
-        <div class="mb-4">
-          <h6 class="d-flex justify-content-between">
-            Completed Tasks
-            <span class="float-right">%68</span>
-          </h6>
-          <div class="progress" style="height:5px;">
-            <div class="progress-bar bg-primary" role="progressbar"
-                 style="width: 68%;" aria-valuenow="68" aria-valuemin="0"
-                 aria-valuemax="100"></div>
-          </div>
-        </div>
+        <a href="http://bifor.laborasyon.com/login" class="list-group-item">Đăng xuất</a>
       </div>
     </div>
   </li>
