--- a/angular-search/src/app/page/layout/header/rightnav/rightnav.component.scss
+++ b/angular-search/src/app/page/layout/header/rightnav/rightnav.component.scss
@@ -1,5 +1,107 @@
 @import "src/globals";
 
+.dropdown {
+  display: inline;
+}
+
+.dropdown-menu {
+  margin-top: 5px;
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  display: block !important;
+  transition: margin-top .3s, opacity .3s;
+  border-top: 1px solid #eee !important;
+
+  .dropdown-scroll {
+    max-height: 300px;
+  }
+
+  &.show {
+    margin-top: 0;
+    visibility: visible;
+    opacity: 1;
+    height: auto;
+  }
+}
+
+.dropdown-header {
+  font-size: inherit;
+  padding: 10px 20px;
+  border-bottom: 1px solid #f0f0f0;
+}
+
+.dropdown-body {
+  padding: 10px 20px;
+}
+
+.dropdown-menu {
+  border-radius: $default-border-radius;
+  font-size: 14px;
+  border: none;
+  box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  padding: .5rem;
+
+  &.dropdown-menu-big {
+    padding: 0;
+    width: 300px;
+    position: absolute;
+    will-change: transform;
+    top: 0px;
+    left: 0px;
+    transform: translate3d(-141px, 30px, 0px) !important;
+  }
+
+  .dropdown-menu-body {
+    max-height: 400px;
+    overflow: auto;
+  }
+
+  .dropdown-menu-title {
+    background-color: $color-primary;
+    padding: 15px 20px;
+    color: white;
+    background-size: cover !important;
+    background-position: center !important;
+  }
+
+  .dropdown-menu-footer {
+    padding: 10px 20px;
+  }
+
+  ul {
+    li {
+      &.dropdown-menu-title {
+        background: red;
+
+        &:first-child {
+          margin-top: 0;
+        }
+
+        margin: 5px 0;
+        padding: 0px 20px 5px;
+        border-bottom: 1px solid #ebebeb
+      }
+    }
+  }
+
+  .dropdown-item {
+    transition: all .2s;
+
+    &:hover, &:focus, &:active {
+      background-color: $color-primary;
+      text-decoration: none;
+      color: white;
+    }
+  }
+}
+
+.dropdown-item {
+  border-radius: $default-border-radius;
+}
+
+
 .avatar {
   border-color: transparent;
 
@@ -36,5 +138,15 @@ ul.navbar-nav {
 
   & + form.search {
     @apply ml-6;
+  }
+}
+
+.list-group {
+
+  .list-group-item {
+    background: white !important;
+    text-decoration: none !important;
+    color: black;
+    outline: none;
   }
 }
