--- a/angular-search/src/app/module/common/component/checkbox/checkbox.component.scss
+++ b/angular-search/src/app/module/common/component/checkbox/checkbox.component.scss
@@ -1,6 +1,13 @@
 @import "src/globals";
 
-.mat-checkbox  {
+.mat-checkbox ::ng-deep  {
+
+  .mat-checkbox-layout {
+    margin-bottom: 0;
+  }
+}
+
+.mat-checkbox {
 
   &.mat-checkbox-checked ::ng-deep {
 
