--- a/angular-search/src/globals.scss
+++ b/angular-search/src/globals.scss
@@ -12,7 +12,7 @@ $color-secondary: #a461d8;
 $background-primary: #FFFFFF;
 $background-secondary: #E6F2FF;
 
-$default-border-radius: .25rem;
+$default-border-radius: 8px;
 
 $default-font-size: 14px;
 
