--- a/angular-search/src/app/module/common/component/pagination/pagination.component.scss
+++ b/angular-search/src/app/module/common/component/pagination/pagination.component.scss
@@ -1,8 +1,7 @@
 @import "src/globals";
 
 .adm-pagination {
-  @apply w-full flex items-center justify-between py-2
-  border-t border-gray-300 mt-2 text-sm;
+  @apply w-full flex items-center justify-between py-2 mt-2 text-sm;
 
   > div {
     @apply flex items-center;
