--- a/angular-search/src/app/module/common/component/tree/tree.component.scss
+++ b/angular-search/src/app/module/common/component/tree/tree.component.scss
@@ -1,11 +1,17 @@
+@import "src/globals";
+
 .example-tree-invisible {
   display: none;
 }
 
 .mat-nested-tree-node div[role=group] {
-  padding-left: 30px;
-
   .mat-tree-node {
+    padding-left: 30px;
+    padding-right: 10px;
+
+    &.active {
+      background: $color-primary-light;
+    }
 
     &:hover {
       @apply text-orange-apple-aqua-600;
@@ -15,6 +21,7 @@
 
 .mat-tree-node {
   min-height: 30px;
+  padding: 10px 0;
   @apply cursor-pointer;
 }
 
@@ -24,9 +31,19 @@ img {
 
 .main-node {
   @apply font-bold text-orange-apple-aqua-600;
+  padding: 10px 15.5px;
+
+  &.active {
+    background: $color-primary-light;
+  }
 }
 
 :host ::ng-deep {
+
+  .mat-tree {
+    @apply border-gray-300 border;
+    border-radius: $default-border-radius;
+  }
 
   .mat-checkbox-layout {
     @apply mb-0 mr-2;
