--- a/angular-search/src/app/page/layout/header/header.component.scss
+++ b/angular-search/src/app/page/layout/header/header.component.scss
@@ -118,7 +118,7 @@
       display: block;
     }
 
-    .navigation-toggler, .search-toggler {
+    .navigation-toggler {
       display: block !important;
     }
 
@@ -142,5 +142,10 @@
 }
 
 @media (max-width: 992px) {
+  .header {
 
+    .search-toggler {
+      display: block !important;
+    }
+  }
 }
