--- a/angular-search/src/app/page/search/search.component.scss
+++ b/angular-search/src/app/page/search/search.component.scss
@@ -1,5 +1,12 @@
 @import "src/globals";
 
+.left-toggle {
+  @apply absolute;
+  right: 1rem;
+  top: 1rem;
+  cursor: pointer;
+}
+
 .columns-setting, .layout-setting {
 
   > div {
