--- a/angular-search/src/app/page/search/search.component.html
+++ b/angular-search/src/app/page/search/search.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-lg-3">
     <Card title="Lọc theo tiêu chí" icon="bx-search-alt.svg" *ngIf="leftFilterShow">
+      <img class="mr-2 left-toggle" src="assets/icons/bx-chevrons-left.svg" (click)="hideLeftBar()"/>
       <Tree [data]="treeData" (onSelect)="onTreeFilter($event)"></Tree>
       <h5 class="card-title mt-4">
         <img class="mr-2" src="assets/icons/bx-search-alt.svg"/>
@@ -12,15 +13,15 @@
         class="w-full py-1"
         *ngFor="let statistic of statisticOptions"
         (onClick)="openStatistic(statistic)"
-      >{{statistic.metaData.name}}</Button>
+      >{{statistic.name}}</Button>
     </Card>
   </div>
   <div class="col-lg-9 flex flex-col"
-       [class.col-lg-12]="!leftFilterShow && !statisticShow"
-       [class.col-lg-9]="leftFilterShow || statisticShow"
+       [class.col-lg-12]="!leftFilterShow"
+       [class.col-lg-9]="leftFilterShow"
   >
     <Card *ngIf="topFilterShow">
-      <div class="top-filter mr-4 inline-block" *ngFor="let meta of topFilter">
+      <div class="top-filter mr-4 mb-4 inline-block" *ngFor="let meta of topFilter">
         <DateFilter
           [text]="getMetaDataName(meta)"
           icon="bx-calendar.svg"
@@ -37,7 +38,7 @@
         ></SelectionFilter>
       </div>
 
-      <div class="filter-action mt-2 text-right">
+      <div class="filter-action text-right">
         <Button icon="gray/bx-reset.svg" type="secondary" class="mr-2">Xoá tất cả</Button>
         <Button icon="white/bx-search-alt.svg" type="primary" (onClick)="triggerFilter()">Tìm kiếm</Button>
       </div>
@@ -50,19 +51,13 @@
                  (click)="toggleCard($event, 'leftFilter')"
                  [class.active]="leftFilterShow"
             >
-              <Checkbox [checked]="leftFilterShow" title="Lọc theo tiêu chí"></Checkbox>
+              <Checkbox [checked]="leftFilterShow" title="Lọc theo tiêu chí & thống kê"></Checkbox>
             </div>
-            <div class="flex items-center column-setting"
+            <div class="flex items-center column-setting last"
                  (click)="toggleCard($event, 'topFilter')"
                  [class.active]="topFilterShow"
             >
               <Checkbox [checked]="topFilterShow" title="Lọc"></Checkbox>
-            </div>
-            <div class="flex items-center column-setting last"
-                 (click)="toggleCard($event, 'statistic')"
-                 [class.active]="statisticShow"
-            >
-              <Checkbox [checked]="statisticShow" title="Thống kê"></Checkbox>
             </div>
           </div>
         </Dropdown>
