--- a/angular-search/src/app/page/search/statistic.modal/statistic.modal.component.html
+++ b/angular-search/src/app/page/search/statistic.modal/statistic.modal.component.html
@@ -10,12 +10,14 @@
   <div class="statistic-meta">
     <img src="assets/icons/bx-bar-chart-alt-2.svg" class="mr-4"/>
     <strong>{{title}}</strong>
-    <DateFilter class="ml-4" text="Ngày thống kê"></DateFilter>
+    <select class="form-control statistic-options" [(ngModel)]="selectedOption" (change)="optionChanged()">
+      <option [value]="option" *ngFor="let option of options">{{option}} {{title.toLowerCase()}} nổi bật</option>
+    </select>
   </div>
   <div class="chart-container mb-4">
-    <chart [type]="barChartConfig.type" [data]="barChartConfig.data"></chart>
+    <chart [type]="barChartConfig.type" [data]="barChartConfig.data" #barChart></chart>
   </div>
   <div class="chart-container">
-    <chart [type]="pieChartConfig.type" [data]="pieChartConfig.data"></chart>
+    <chart [type]="pieChartConfig.type" [data]="pieChartConfig.data" #pieChart></chart>
   </div>
 </mat-dialog-content>
