--- a/angular-search/src/app/module/common/component/table/table.component.scss
+++ b/angular-search/src/app/module/common/component/table/table.component.scss
@@ -48,3 +48,17 @@ tr.mat-row {
     background-color: $color-primary-light !important;
   }
 }
+
+.btn-edit {
+
+  path {
+    fill: $color-primary;
+  }
+}
+
+.btn-delete {
+
+  path {
+    fill: $color-danger;
+  }
+}
