--- a/angular-search/src/globals.scss
+++ b/angular-search/src/globals.scss
@@ -8,7 +8,7 @@ $body-bg-color-dark-light: #2b3653;
 $color-primary: #ff9500;
 $color-primary-light: #FFE5BF;
 $color-secondary: #a461d8;
-$color-danger: #ff2d55;
+$color-danger: red;
 
 $background-primary: #FFFFFF;
 $background-secondary: #E6F2FF;
