--- a/angular-search/src/styles.scss
+++ b/angular-search/src/styles.scss
@@ -63,3 +63,25 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-menu-content {
   padding: 4px !important;
 }
+
+
+.badge {
+
+  font-size: 0.75rem;
+
+  &.badge-primary {
+    background-color: $color-primary;
+    @apply text-white;
+  }
+}
+
+.page-header {
+  @apply flex flex-row mb-4 items-center;
+  font-weight: bold;
+  @apply uppercase font-bold;
+
+  img {
+    @apply mr-2;
+    height: 30px;
+  }
+}
